--- a/style.css
+++ b/style.css
@@ -48,7 +48,7 @@ button {
   border: 2px solid #000;
   border-radius: 10px;
   padding: 10px;
-  margin: 0 auto;
+  margin: 0 auto 30px auto;
 }
 
 .keyboard-row {
@@ -108,6 +108,14 @@ button {
   color: #fff;
 }
 
+.key-button_up-arrow {
+  transform: rotate(-90deg);
+}
+
+.key-button_down-arrow {
+  transform: rotate(90deg);
+}
+
 .key-button_space {
   flex-grow: 1;
   /* width: 400px; */
@@ -120,4 +128,9 @@ button {
 
 .key-button_pressed:hover {
   background-color: red;
+}
+
+.OS, .language {
+  text-align: center;
+  margin-bottom: 30px;
 }
